--- a/JavaFXModule2/nbproject/project.properties
+++ b/JavaFXModule2/nbproject/project.properties
@@ -34,12 +34,18 @@ dist.jar=${dist.dir}/JavaFXModule2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-all-1.3.jar=C:\\Users\\joann\\Downloads\\hamcrest-all-1.3.jar
+file.reference.junit-4.13.2-sources.jar=C:\\Users\\joann\\Downloads\\junit-4.13.2-sources.jar
+file.reference.junit-4.13.2.jar=C:\\Users\\joann\\Downloads\\junit-4.13.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.junit-4.13.2-sources.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,7 +57,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
