Added mySQL support to application
Changed saving the individual words from an array to the database

--- a/JavaFXModule2/nbproject/project.properties
+++ b/JavaFXModule2/nbproject/project.properties
@@ -37,6 +37,9 @@ excludes=
 file.reference.hamcrest-all-1.3.jar=C:\\Users\\joann\\Downloads\\hamcrest-all-1.3.jar
 file.reference.junit-4.13.2-sources.jar=C:\\Users\\joann\\Downloads\\junit-4.13.2-sources.jar
 file.reference.junit-4.13.2.jar=C:\\Users\\joann\\Downloads\\junit-4.13.2.jar
+file.reference.mysql-connector-java-8.0.23.jar=..\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\joann\\OneDrive\\Documents\\Valencia\\old pc\\OOP\\Final\\dist\\lib\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23__2021_04_24_16_17_45_UTC_.jar-1=dist\\lib\\mysql-connector-java-8.0.23 (2021_04_24 16_17_45 UTC).jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -45,7 +48,10 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.junit-4.13.2-sources.jar}:\
     ${file.reference.junit-4.13.2.jar}:\
-    ${file.reference.hamcrest-all-1.3.jar}
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23__2021_04_24_16_17_45_UTC_.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
