Separate Client/Server
Separate the application to a client/server model and add the code to a mySQL database

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /JavaFXModule2/nbproject/private/
 /JavaFXModule2/build/
 /JavaFXModule2/dist/
+/Server/nbproject/private/
+/Server/build/
+/Server/dist/
